--- a/packages/node-rabbitmq/package.json
+++ b/packages/node-rabbitmq/package.json
@@ -17,6 +17,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "amqplib": "^0.7.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
