--- a/packages/node-rabbitmq/package.json
+++ b/packages/node-rabbitmq/package.json
@@ -5,7 +5,7 @@
   "author": "vamsi krishna <vamsi.krishna@kivitech.in>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/node-rabbitmq.js",
+  "main": "noderabbitmqserver.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
