--- a/packages/node-rabbitmq/package.json
+++ b/packages/node-rabbitmq/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "start": "kill -9 `sudo lsof -t -i:4000` && nodemon"
   },
   "dependencies": {
     "amqplib": "^0.7.1",
