--- a/packages/node-rabbitmq/package.json
+++ b/packages/node-rabbitmq/package.json
@@ -2,7 +2,7 @@
   "name": "rabbitmq",
   "version": "1.3.1",
   "description": "demo project for rabbitmq with nodejs",
-  "author": "vamsi krishna <vamsi.krishna@kivitech.in>",
+  "author": "vamsi krishna",
   "homepage": "",
   "license": "ISC",
   "main": "noderabbitmqserver.js",
